# flymy_comfyui_repo_gen

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
flymy_comfyui_repo_gen/core/: exceptions.py  generate_repository.py  generate_resolution.py  utils.py  workflow_edit.py
flymy_comfyui_repo_gen/core/code_gen/: BaseCodeConfig.py  CodeGenerator.py  TypesGenerator.py  __init__.py  filters.py  jinja_config.py
flymy_comfyui_repo_gen/core/code_gen/Infer/: InferGenerator.py
flymy_comfyui_repo_gen/core/code_gen/Model/: ModelConfig.py  ModelGenerator.py
flymy_comfyui_repo_gen/core/code_gen/Pyproject/: PyprojectConfig.py  PyprojectGenerator.py
flymy_comfyui_repo_gen/core/code_gen/Types/: TypesConfig.py  TypesGenerator.py
flymy_comfyui_repo_gen/core/code_gen/assets/: Types.py.j2
flymy_comfyui_repo_gen/core/code_gen/assets/templates/: Types.py.j2  infer.py.j2  model.py.j2  pyproject.toml.j2
flymy_comfyui_repo_gen/schemas/: BaseComfyWorkflow.py  ComfyRepository.py  FMARepoConfig.py  RepoGeneratorConfig.py  ResultRepo.py  remap_fielld_set.py
flymy_comfyui_repo_gen/schemas/ComfyUISchemas/: BaseNode.py  ComfyNode.py  FlyMyComfyUI.py  Node.py  NodeField.py
flymy_comfyui_repo_gen/scripts/: main.py  repo_generator.py
flymy_comfyui_repo_gen/scripts/schemas/: ComfyRepositoryInstallationVariants.py  StringEnumChoice.py  inputs.py
flymy_comfyui_repo_gen/tests/: conftest.py  test_generate_repository.py
flymy_comfyui_repo_gen/tests/fixtures/: test_resolution.json
workflows/: test.yaml
