[tool.poetry]
name = "flymy-comfyui-repo-gen"
version = "0.1.0"
description = ""
authors = ["D1-3105 <lyerhd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
jinja2 = "^3.1.4"
typer = "^0.13.1"
pydantic = "^2.10.1"
black = "^24.10.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
